feat(jvm): compose the args for the runtime they will actually run under
`-XX:+ZGenerational` was emitted whenever the ZGC preset was chosen. JDK 24 removed the option -- generational became ZGC's only mode -- and it is not ignored there but rejected: "Unrecognized VM option 'ZGenerational'", then "Could not create the Java Virtual Machine". The preset is gated at Java 17 and up with no upper bound, so picking it for a pack on a current JDK produced a pack that cannot start.

Give the composer the target's Java major. The pack settings pass the manifest's declared major, which is the runtime the launcher will provision. The SmartyCraft server path declares none and passes null; there the flag is omitted, because omitting costs a throughput mode on 21 to 23 while emitting costs the launch outright.